@@ -1,0 +1,7 @@
+<div class="template_box">
+{foreach item=name key=key from=$templates}
+{if is_numeric($key)}
+<a href="{$smarty.const.HTML_DOMAIN}{$smarty.const.HTML_ROOT}?template={$name}">{$name|substr:0:1|strtoupper}{$name|substr:1}</a>
+{/if}
+{/foreach}
+</div>
