@@ -1,3 +1,6 @@
+2009-03-31
+Fixed db_amazon module to not access the database unnessicarily
+
 2009-03-30
 All modules return the ID of added or modified entry
 	This makes adding items to the IDs database much faster when they are already known
